about me section

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,15 @@
   padding: 2rem;
   text-align: center;
 }
+
+section {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+html {
+  scroll-behavior: smooth;
+}
