--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #1F2937;
+
+  --primary-color: #2EC5ED;
+  --secondary-color: #E6489D;
 }
 
 body {
