--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #1F2937;
 
-  --primary-color: #2EC5ED;
-  --secondary-color: #E6489D;
+  --primary-color: rgba(46, 197, 237, 100);
+  --secondary-color: rgba(230, 72, 157, 100);
 }
 
 body {
