--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -110,15 +110,18 @@
     overflow: hidden;
     position: relative;
     transform: perspective(1200px) rotateX(10deg) rotateY(-20deg) rotateZ(5deg);
-    animation: idle 5s infinite alternate;
+    animation: idle 5s infinite ease-in-out;
 }
 
 @keyframes idle {
     0% {
         transform: perspective(1200px) rotateX(10deg) rotateY(-20deg) rotateZ(5deg);
     }
+    50% {
+        transform: perspective(1200px) rotateX(15deg) rotateY(-22deg) rotateZ(8deg);
+    }
     100% {
-        transform: perspective(1200px) rotateX(15deg) rotateY(-25deg) rotateZ(8deg);
+        transform: perspective(1200px) rotateX(10deg) rotateY(-20deg) rotateZ(5deg);
     }
 }
 
