--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,16 @@
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-family: sans-serif;
+    font-size: 1em;
+    font-weight: normal;
+    font-style: normal;
+    text-decoration: none; 
+}
+
 #root {
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
