--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -50,16 +50,12 @@
 
 .contact-form {
   flex: 1;
-  background-color: grey;
   padding: 2rem;
   border-radius: 16px;
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  background-color: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  min-width: 400px;
 }
 
 .form-group {
