--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 
 html {
   scroll-behavior: smooth;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 #root {
@@ -26,6 +26,9 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  scroll-snap-align: start;
-  scroll-snap-stop: always;
+  padding: 2rem 0;
+}
+
+section + section {
+  margin-top: 2rem;
 }
