--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
     font-weight: normal;
     font-style: normal;
     text-decoration: none; 
+    box-sizing: border-box;
 }
 
 html {
@@ -27,8 +28,5 @@ section {
   justify-content: center;
   align-items: center;
   padding: 2rem 0;
-}
-
-section + section {
-  margin-top: 2rem;
+  gap: 4rem;
 }
