--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -267,7 +267,7 @@ ul {
     padding: 0;
 }
 
-ul li {
+.projects-indicator-list li {
     cursor: pointer;
     opacity: 0.6;
     transition: opacity 0.2s ease;
