--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,16 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
   background-color: #1F2937;
 
-  --primary-color: rgba(46, 197, 237, 100);
-  --secondary-color: rgba(230, 72, 157, 100);
-  --border-color: #374151;
-  --box-background: rgb(44, 53, 65);
+  --primary-color: rgba(46, 197, 237, 1);
+  --secondary-color: rgba(230, 72, 157, 1);
+  --box-bg: rgba(255, 255, 255, 0.05);
+  --box-border: rgba(255, 255, 255, 0.15);
+  --section-bg: rgba(255, 255, 255, 0.02);
+
+  --text-color: #ffffff;
+  --input-background: rgba(255, 255, 255, 0.05);
 }
 
 body {
@@ -19,9 +22,25 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  color: var(--text-color);
 }
 
 h1 {
   font-size: 4em;
   line-height: 1.1;
+}
+
+h2 {
+  font-size: 2.5em;
+  line-height: 1.2;
+}
+
+h3 {
+  font-size: 1.75em;
+  line-height: 1.3;
+}
+
+h4 {
+  font-size: 1.25em;
+  line-height: 1.4;
 }
