--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
   --primary-color: rgba(46, 197, 237, 1);
   --secondary-color: rgba(230, 72, 157, 1);
-  --box-bg: rgba(255, 255, 255, 0.05);
+  --box-bg: rgb(42, 52, 65);
   --box-border: rgba(255, 255, 255, 0.15);
   --section-bg: rgba(255, 255, 255, 0.02);
 
