--- a/src/components/Techs.css
+++ b/src/components/Techs.css
@@ -9,8 +9,8 @@
 
 .techs-list {
   position: relative;
-  min-height: 50rem; 
-  margin: auto;
+  width: 55rem;
+  height: 55rem;
 }
 
 /* ANIMATION D'APPARITION */
