--- a/src/components/About.css
+++ b/src/components/About.css
@@ -95,6 +95,7 @@
   margin: 0;
   padding: 0;
   position: relative;
+  padding-bottom: 1.25rem;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -104,10 +105,10 @@
 .timeline-list:before {
   content: "";
   position: absolute;
-  left: 0.6rem;
+  left: 0.65rem;
   top: 1.25rem;
+  bottom: 0;
   width: 3px;
-  height: calc(100% - (2.6rem * var(--timeline-items, 3)));
   background-color: var(--primary-color);
   z-index: 0;
 }
@@ -123,6 +124,12 @@
   transition: all 0.3s ease;
 }
 
+.timeline-item:last-child {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  position: relative;
+}
+
 .timeline-point {
   width: 1.5rem;
   height: 1.5rem;
@@ -134,12 +141,39 @@
   margin-right: 1.2rem;
   margin-top: 0.2rem;
   transition: all 0.3s ease;
+  position: relative;
+  z-index: 2;
+}
+
+/* .timeline-item:last-child .timeline-point::after {
+  content: "";
+  position: absolute;
+  left: calc(50% - 3px);
+  top: 50%;
+  width: 6px;
+  height: 6rem;
+  background: var(--box-bg);
+  z-index: 1;
+} */
+
+.timeline-item:last-child::after {
+  content: "";
+  position: absolute;
+  left: calc(0.65rem - 1.5px);
+  top: calc(0.2rem + 0.75rem);
+  bottom: 0;
+  width: 6px;
+  height: 6rem;
+  background: var(--box-bg);
+  z-index: 1;
+  pointer-events: none;
 }
 
 .timeline-item:hover .timeline-point {
   transform: scale(1.2); 
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
-  background-color: var(--secondary-color); 
+  background-color: var(--secondary-color);
+  z-index: 2;
 }
 
 .timeline-content {
